fixed layout issue

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -407,7 +407,7 @@ main {
   object-fit: contain;
 }
 .gallery figcaption {
-  font-family: "work sans";
+  font-family: "Work Sans", sans-serif;
   font-size: 13px;
   font-weight: 400;
   text-align: left;
@@ -509,7 +509,7 @@ footer nav ul {
 label {
   width: 100%;
   background: #e5e5e5;
-  font-family: "work sans";
+  font-family: "Work Sans", sans-serif;
   font-size: 14px;
   font-weight: 500;
   margin-top: 30px;
@@ -574,7 +574,7 @@ form a {
 .modal-photo-gallery h2,
 .add-photo h2 {
   color: #000000;
-  font-family: "work sans";
+  font-family: "Work Sans", sans-serif;
   font-weight: 400;
   font-size: 26px;
   line-height: 30px;
@@ -588,7 +588,7 @@ form a {
   bottom: 162px;
   left: 50%;
   transform: translateX(-50%);
-  width: 70%;
+  width: 67%;
   border-top: 1px solid #b3b3b3;
 }
 
@@ -637,7 +637,7 @@ form a {
   background: #ffffff;
   border: 2px solid #1d6154;
   border-radius: 10px;
-  font-family: "work sans";
+  font-family: "Work Sans", sans-serif;
   font-size: 26px;
   font-weight: 400;
   text-align: center;
@@ -650,23 +650,18 @@ form a {
 }
 
 .gallery-modal {
-  width: 70%;
-  height: 50%;
+  width: 100%;
+  height: 400px;
   position: relative;
   left: 50%;
-  transform: translateX(-50%);
-  margin-top: 46px;
-}
-
-.gallery-modal {
-  width: 100%;
-  height: 380px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   gap: 6px;
+  transform: translateX(-50%);
+  margin-top: 46px;
   overflow-y: auto;
-  
 }
+
 .gallery-modal figure {
   position: relative;
 }
@@ -705,7 +700,7 @@ form a {
   z-index: 15;
   width: 320px;
   height: 100px;
-  font-family: "work sans";
+  font-family: "Work Sans", sans-serif;
   font-size: 16px;
   font-weight: 700;
   color: #3d3d3d;
@@ -777,7 +772,7 @@ form a {
   background: #ffffff;
   border: 2px solid #1d6154;
   border-radius: 10px;
-  font-family: "work sans";
+  font-family: "Work Sans", sans-serif;
   font-size: 26px;
   font-weight: 400;
   text-align: center;
@@ -811,7 +806,7 @@ form a {
   align-items: center;
   background: #e8f1f6;
   border-radius: 3px;
-  font-family: "work sans";
+  font-family: "Work Sans", sans-serif;
   font-size: 10px;
   font-weight: 400;
   margin: 0 auto;
@@ -847,7 +842,7 @@ form a {
   background: #cbd6dc;
   border-radius: 50px;
   color: #306685;
-  font-family: "work sans";
+  font-family: "Work Sans", sans-serif;
   font-size: 14px;
   font-weight: 500;
   text-align: center;
@@ -894,6 +889,13 @@ form a {
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
   margin: 10px auto 0px;
 }
+#title, #category{
+  font-family: "Work Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  color: #444444;
+}
 
 .label-title,
 .label-category {
@@ -901,7 +903,7 @@ form a {
   height: 16px;
   font-size: 14px;
   font-weight: 500;
-  font-family: "work sans";
+  font-family: "Work Sans", sans-serif;
   background: transparent;
   margin: 10px 103px 0px 103px;
   position: relative;
